set up prometheus and grafana

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-IPAM_APP_ENV=dev
-IPAM_DB_URL=postgresql+asyncpg://postgres:postgres@db:5432/ipam
-IPAM_JWT_SECRET=dev-not-secret
+SUBNETTER_APP_ENV=dev
+SUBNETTER_DB_URL=postgresql+asyncpg://postgres:postgres@db:5432/subnetter
+SUBNETTER_JWT_SECRET=dev-not-secret
