--- a/k8s/configmap.yml
+++ b/k8s/configmap.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: ipam-config
-  namespace: ipam
+  name: subnetter-config
+  namespace: subnetter
 data:
   IPAM_APP_ENV: dev
