--- a/k8s/secret.yml
+++ b/k8s/secret.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ipam-secrets
-  namespace: ipam
+  name: subnetter-secrets
+  namespace: subnetter
 type: Opaque
 stringData:
-  IPAM_DB_URL: postgresql+asyncpg://postgres:postgres@postgres:5432/ipam
-  IPAM_JWT_SECRET: dev-not-secret
+  SUBNETTER_DB_URL: postgresql+asyncpg://postgres:postgres@postgres:5432/subnetter
+  SUBNETTER_JWT_SECRET: dev-not-secret
