--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ sqlmodel = "^0.0.25"
 greenlet = "^3.2.4"
 asyncpg = "^0.30.0"
 pydantic-settings = "^2.11.0"
+prometheus-client = "^0.23.1"
+starlette-exporter = "^0.23.0"
 
 
 [build-system]
